# opengl_renderer

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: GridFragment.shader  GridVertex.shader  PhongFragment.shader  PhongVertex.shader
src/: main.cpp
src/app/: Application.cpp  Application.h  InputHandler.cpp  InputHandler.h
src/core/: Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Geometry.h  Light.h  Transform.cpp  Transform.h
src/rendering/: BufferLayout.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
src/scene/: Scene.cpp  Scene.h
src/simulation/: ColliderBox.h  Particle.h  PhysicsEngine.cpp  PhysicsEngine.h  SimulationParams.h  Softbody.cpp  Softbody.h  Spring.h
src/ui/: ImGuiLayer.cpp  ImGuiLayer.h  SimulationUI.cpp  SimulationUI.h
